--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.22.0",
-    "sqlite": "^4.0.11",
-    "sqlite3": "^4.2.0"
+    "sequelize": "^5.22.0"
   },
   "engines": {
     "node": "12.16.3",
